--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/task"
+    <item android:id="@id/tasksFragment"
         android:icon="@drawable/todo"
         android:title="@string/todo_menu_title"/>
     <item android:id="@+id/notes"
