--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#6D4C41</color>
+    <color name="colorPrimaryVariant">#40241A</color>
+    <color name="colorOnPrimary">#9C786C</color>
 </resources>
